--- a/002_LaTeX/bibliography.bib
+++ b/002_LaTeX/bibliography.bib
@@ -234,7 +234,7 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 	year = {1986}
 }
 
-@Article{Jianwei2021,
+@article{Jianwei2021,
 	AUTHOR = {Gao, Jianwei and Yang, Yu and Gao, Fangjie and Liang, Pengcheng},
 	TITLE = {Optimization of Electric Vehicles Based on Frank-Copula-GlueCVaR Combined Wind and Photovoltaic Output Scheduling Research},
 	JOURNAL = {Energies},
@@ -462,6 +462,7 @@ year = {2015},
 	abstract = {Regular vine distributions which constitute a flexible class of multivariate dependence models are discussed. Since multivariate copulae constructed through pair-copula decompositions were introduced to the statistical community, interest in these models has been growing steadily and they are finding successful applications in various fields. Research so far has however been concentrating on so-called canonical and D-vine copulae, which are more restrictive cases of regular vine copulae. It is shown how to evaluate the density of arbitrary regular vine specifications. This opens the vine copula methodology to the flexible modeling of complex dependencies even in larger dimensions. In this regard, a new automated model selection and estimation technique based on graph theoretical considerations is presented. This comprehensive search strategy is evaluated in a large simulation study and applied to a 16-dimensional financial data set of international equity, fixed income and commodity indices which were observed over the last decade, in particular during the recent financial crisis. The analysis provides economically well interpretable results and interesting insights into the dependence structure among these indices.}
 }
 
+
 @book{Cherubini_Copula_Methods_in_Finance,
 	author = {Cherubini, Umberto and Luciano, Elisa and Vecchiato, Walter},
 	year = {2004},
@@ -469,7 +470,8 @@ year = {2015},
 	pages = {},
 	title = {Copula Methods in Finance},
 	isbn = {9780470863442},
-	doi = {10.1002/9781118673331}
+	doi = {10.1002/9781118673331},
+	publisher = {{John Wiley \& Sons, Inc}}
 }
 
 @book{Cherubini_Dynamic_Copula_Methods_in_Finance,
@@ -479,7 +481,8 @@ year = {2015},
 	pages = {},
 	title = {Dynamic Copula Methods in Finance},
 	isbn={9780470683071},
-	doi = {10.1002/9781118467404}
+	doi = {10.1002/9781118467404},
+	publisher = {{John Wiley \& Sons, Inc}}
 }
 
 @book{Czado_Vine_Copulas,
@@ -488,6 +491,7 @@ year = {2015},
 	pages = {},
 	title = {Analyzing Dependent Data with Vine Copulas},
 	isbn = {9783030137847},
+	publisher = {Springer Cham}
 }
 
 @book{Kurowicka_Dependence_Modeling,
@@ -496,79 +500,112 @@ year = {2015},
 	month = {12},
 	title = {Dependence Modeling: Vine Copula Handbook},
 	isbn = {978-981-4299-87-9},
-	doi = {10.1142/7699}
-}
-
-@article{Taleb_BS_is_BS,
-	author = {Haug, Espen and Taleb, Nassim},
-	year = {2007},
-	month = {01},
-	pages = {},
-	title = {{Why We Have Never Used the Black-Scholes-Merton Option Pricing Formula}}
+	doi = {10.1142/7699},
+	publisher = {{World Scientific Publishing Co., Inc}}
 }
 
 @book{MultivariateDistributions,
 	author = {Anderson, Theodore W.},
 	title = {An Introduction to Multivariate Statistical Analysis},
 	year = {2003},
+	month = {07},
+	isbn = {978-0-471-36091-9},
+	doi = {},
+	publisher = {{John Wiley \& Sons, Inc}}	
 }
 
 @book{Joe_Multivariate_Models,
 	author = {Joe, Harry},
 	title = {Multivariate Models and Multivariate Dependence Concepts},
 	year = {1997},
+	month = {05},
+	isbn = {9780367803896},
+	doi = {10.1201/9780367803896},
+	publisher = {{Chapman \& Hall}}
 }
 
 @article{Shefzik_Weather,
-	author       = {Schefzik, R.},
-	title        = {Multivariate discrete copulas, with applications in probabilistic weather forecasting},
-	journal      = {Publications de l'Institut de Statistique de l'Université de Paris},
-	year         = {2015},
+	author = {Schefzik, Roman},
+	title = {Multivariate discrete copulas, with applications in probabilistic weather forecasting},
+	journal = {Publications de l'Institut de Statistique de l'Université de Paris},
+	year = {2015},
+	volume = {59},
+	pages = {87-116}
 }
 
 @book{Siddique_Stress_testing,
 	author = {Hasan, Iftekhar and Lynch, David and Siddique Akhtar},
 	title = {Stress Testing. Approaches, Methods and Applications},
 	year = {2019},
+	month = {10},
+	publisher = {Risk books}
+	isbn = {978-1782723912}
 }
 
 @book{OpRisk,
 	author = {Peters, Gareth and Shevchenko, Pavel},
 	title = {Advances in Heavy Tailed Risk Modeling: A Handbook of Operational Risk},
 	year = {2015},
+	month = {02},
+	isbn = {9781118909539},
+	publisher = {{John Wiley \& Sons, Inc}},
+	doi = {10.1002/9781118909560}
 }
 
-@manual{BaselII,
-	author = {{The Basel Committee on Banking Supervision}},
-	title = {Revisions to the Basel II Market Risk Framework},
-	year = {2010},
-}
-
-@online{PetroleumForecasts,
+@misc{PetroleumForecasts,
 	author = {{U.S. Energy Information Administration}},
 	title = {Short-Term Energy Outlook},
 	year={2022},
 	month={08},
-	date = {12/08/2022},
-	url = {https://www.eia.gov/outlooks/steo/report/global_oil.php},
+	howpublished = {\url{https://www.eia.gov/outlooks/steo/report/global_oil.php}},
+	note = {Accessed on: 2022-09-03}
 }
 
 @book{Fixed_Income,
 	author = {Choudhry, Moorad},
 	title = {Fixed-income securities and derivatives handbook},
-	year = {2005},
+	year = {2010},
+	month = {08},
+	isbn = {978-1-576-60334-5},
+	publisher = {{John Wiley \& Sons, Inc}}
 }
 
-@article{Eyigungor_Markov_Spreads,
-	title={Sovereign Debt Spreads in a Markov Switching Regime},
-	author={Eyigungor, Burcu},
-	journal={Manuscript, UCLA},
-	year={2006},
-	publisher={Citeseer}
+@article{Boubaker_Markov_Copula,
+	author = {Boubaker, Heni and Sghaier, Nadia},
+	year = {2016},
+	month = {07},
+	pages = {565-589},
+	title = {Markov-Switching Time-Varying Copula Modeling of Dependence Structure between Oil and GCC Stock Markets:},
+	volume = {06},
+	journal = {Open Journal of Statistics},
+	doi = {10.4236/ojs.2016.64048}
 }
 
 @article{KGHM,
 	author = {{KGHM Polska Miedź S.A. Group}},
 	title = {{The management board's report on the activities of KGHM Polska Miedź S.A. and of the KGHM Polska Miedź S.A. Group in 2021}},
 	year = {2021},
+}
+
+
+@article{Taleb_BS_is_BS,
+	title = {{Option traders use (very) sophisticated heuristics, never the Black-Scholes-Merton formula}},
+	author = {Haug, Espen Gaarder and Taleb, Nassim Nicholas},
+	year = {2011},
+	journal = {{Journal of Economic Behavior \& Organization}},
+	volume = {77},
+	number = {2},
+	pages = {97-106},
+	abstract = {Option traders use a heuristically derived pricing formula which they adapt by fudging and changing the tails and skewness by varying one parameter, the standard deviation of a Gaussian. Such formula is popularly called "Black-Scholes-Merton" owing to an attributed eponymous discovery (though changing the standard deviation parameter is in contradiction with it). However, we have historical evidence that: (1) the said Black, Scholes and Merton did not invent any formula, just found an argument to make a well known (and used) formula compatible with the economics establishment, by removing the "risk" parameter through "dynamic hedging", (2) option traders use (and evidently have used since 1902) sophisticated heuristics and tricks more compatible with the previous versions of the formula of Louis Bachelier and Edward O. Thorp (that allow a broad choice of probability distributions) and removed the risk parameter using put-call parity, (3) option traders did not use the Black-Scholes-Merton formula or similar formulas after 1973 but continued their bottom-up heuristics more robust to the high impact rare event. The paper draws on historical trading methods and 19th and early 20th century references ignored by the finance literature. It is time to stop using the wrong designation for option pricing.},
+	keywords = {Options Option hedging Delta hedging Put-call parity Derivatives},
+	url = {https://EconPapers.repec.org/RePEc:eee:jeborg:v:77:y:2011:i:2:p:97-106}
+}
+
+
+@misc{BaselII,
+	author = {{Basel Committee on Banking Supervision}},
+	title = {{Revisions to the Basel II Market Risk Framework}},
+	year = {2010},
+	howpublished = {\url{http://www.bis.org/publ/bcbs193.pdf}},
+	note = {Accessed on: 2022-09-03}
 }
