--- a/002_LaTeX/modele_spreadow.tex
+++ b/002_LaTeX/modele_spreadow.tex
@@ -26,6 +26,6 @@ Próbą uwzględnienia autokorelacji w modelach komponentów spreadu jest użyci
 $$ dS_i(t) =S_i(t)[-\lambda (\log S_i(t) - \mu_i)dt + \sigma_i dW_i(t)],$$
 gdzie $\lambda_i>0$,  $\mu_i \in \R$, $\sigma_i >0$, oraz $\{W_1(t)\}_t$ i $\{W_2(t)\}_t$ są dwoma procesami Wienera o korelacji $\rho$.\\
 
-Spread jest modelowany wtedy jako różnica tych dwóch procesów. Nie poprawia to problemu gaussowskości procesu czy struktury korelacji między komponentami, oraz dodatkowo zmuszeni jesteśmy do numerycznej analizy rozwiązania. Jest to jednak pierwszy krok w stronę modeli dla komponentów spreadu wykorzystujących techniki modelowania szeregów czasowych. Wychodząc z tej idei pojawiła się liczna lista prac wykorzystujących bardziej zaawansowane modele, w których analityczność jest porzucona w zamian za poprawniejszy modelu opisujący dynamikę komponentów. \cite{Herath_Copula_Crack_Spread}, \cite{Eyigungor_Markov_Spreads}, \cite{Espen_Crack_Spread_Copula}, czy \cite{Bernard_Pricing_Multivariate_Options_with_copulae} pokazują różne podejścia, od modeli ARMA-GARCH, przez procesy Levy'ego, po modele \emph{Markov switching regime} do opisu komponentów spreadu, które dobrze radzą sobie z empiryczną ciężkoogonowością i rozwiązują problem gaussowskości.\\
+Spread jest modelowany wtedy jako różnica tych dwóch procesów. Nie poprawia to problemu gaussowskości procesu czy struktury korelacji między komponentami, oraz dodatkowo zmuszeni jesteśmy do numerycznej analizy rozwiązania. Jest to jednak pierwszy krok w stronę modeli dla komponentów spreadu wykorzystujących techniki modelowania szeregów czasowych. Wychodząc z tej idei pojawiła się liczna lista prac wykorzystujących bardziej zaawansowane modele, w których analityczność jest porzucona w zamian za poprawniejszy modelu opisujący dynamikę komponentów. \cite{Herath_Copula_Crack_Spread}, \cite{Boubaker_Markov_Copula}, \cite{Espen_Crack_Spread_Copula}, czy \cite{Bernard_Pricing_Multivariate_Options_with_copulae} pokazują różne podejścia, od modeli ARMA-GARCH, przez procesy Levy'ego, po modele \emph{Markov switching regime} do opisu komponentów spreadu, które dobrze radzą sobie z empiryczną ciężkoogonowością i rozwiązują problem gaussowskości.\\
 
 Wybór modeli dla komponentów spreadu można więc uzależnić od rodzaju modelowanego aktywa, w sposób uchwycający jego unikatowe własności, co jest najbardziej ogólnym podejściem. Mając wybrane modele dla komponentów spreadu (modele brzegowe), wciąż otwarty pozostaje jednak problem połączenia ich w spójny, łączny model dla spreadu. W modelach Blacka-Scholesa i Ornsteine'a-Uhlenbecka za strukturę zależności odpowiadała korelacja $\rho$ źródeł losowości (procesów Wienera). Zwykła korelacja tam wystarczała, ponieważ posługiwaliśmy się procesami Wienera, o normalnych rozkładach skończenie-wymiarowych. W ogólniejszym podejściu jednak będziemy chcieli osłabić założenie normalności innowacji modelu, przez co potrzebny będzie dokładniejszy opis ich struktury zależności. Tę problematykę poruszymy w kolejnym rozdziale opisując podejście kopułowe.
